[package]
name = "tello-commander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actuall GUI library stuff
egui = "0.19.0"
eframe = "0.19.0"
rfd = "0.10.0"

#async to perserve my sanity
tokio = { version = "1.21.2", features = ["full"] }
once_cell = "1.15.0" #the god tier for static values
futures = "0.3"

#drone SDK
tello-sdk = {path = "../tello-sdk-remake" }